# django_drf_tutorial

./: .gitignore  pyproject.toml
apps/api/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_snippet_owner.py
config/: asgi.py  settings.py  urls.py  wsgi.py
