[project]
name = "django_drf_test"
version = "1.0.0"
requires-python = ">=3.12"
authors = [
    {name = "Jordan DUFRESNE", email = "jordan.dufresne.dev@gmail.com"}
]
maintainers = [
    {name = "Jordan DUFRESNE", email = "jordan.dufresne.dev@gmail.com"}
]
description = "A test project for Django and DRF"
readme = "README.md"
keywords = ["django", "drf", "test"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "django",
    "djangorestframework",
    "markdown",
    "django-filter",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
]

[tool.pytest.ini_options]
addopts = "-vv --tb=short --cov=apps --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/", "config/"]